--- a/mipagina/index.html
+++ b/mipagina/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>Mi pagina web</title>
 </head>
-<body background="HOLA3.PNG">
+<body background="HOLA3.png">
 	<h1 style="color: red">Chiquefutbol</h1>
 	 <div style="position:absolute; width: 190px; height: 100px; left: 35% ">
 	 	<h1 style="color: red">Que es el futbol?</h1>
