--- a/layaut/layout.html
+++ b/layaut/layout.html
@@ -29,7 +29,7 @@
     <div class="derecha">
     	<div class="item">
     		<h2  style="color: red"> VISTA PREVIA </h2>
-    		<img src="HTML5.JPG" width="100px">
+    		<img src="HTML5.jpg" width="100px">
     	</div>
     </div>   
     <div class="footer">
