--- a/layaut/layout.html
+++ b/layaut/layout.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div style="color: red" class="header">
-		<h1>PC GAMER BROGH</h1>
+		<h1>PC GAMER </h1>
 		<p>Descripcion de la pagina</p>
 	</div>
 	<div style="color: red" class="menu">
@@ -20,9 +20,9 @@
 	<div class="contenido">
 		<div class="izquierda">
 			<div style="color: red" class="item">
-				<h2>BARATA BROBHJHBHJHN</h2>
+				<h2>Muy cara</h2>
 				<h5>1000°</h5>
-				<img src="HTML5.JPG" alt="" class="" width="900" height="500">
+				<img src="HTML5.jpg" alt="" class="" width="900" height="500">
             </div>
         </div>
     </div> 
