--- a/layaut/layout.html
+++ b/layaut/layout.html
@@ -15,7 +15,7 @@
 		<
 		<a href="">COMPRAR BEOG</a>
         <a href="chieve.html">pag.chieve</a>
-        <a href="https://www.epicgames.com/fortnite/es-ES/buy-now/battle-royale">BAAAAAAH</a>
+        <a href="https://www.epicgames.com/fortnite/es-ES/buy-now/battle-royale">Fornite</a>
 	</div>
 	<div class="contenido">
 		<div class="izquierda">
