--- a/layaut/layout.html
+++ b/layaut/layout.html
@@ -13,7 +13,7 @@
 	<div style="color: red" class="menu">
 		<a href="">COMPRAR</a>
 		<
-		<a href="">COMPRAR BEOG</a>
+		<a href="https://www.bhphotovideo.com/c/buy/pc-gaming-computers/ci/31155/N/3662965659?c3api=2572%2C113041915987&gclid=EAIaIQobChMI9-aMh6Ts4AIVQ77ACh1ymAUkEAAYAiAAEgLpyPD_BwE&origSearch=Ganing+Pc%2F%3Fcurrency%3DEUR">ver otras</a>
         <a href="chieve.html">pag.chieve</a>
         <a href="https://www.epicgames.com/fortnite/es-ES/buy-now/battle-royale">Fornite</a>
 	</div>
